# NovelMaker

./: CMakeLists.txt
NovelMaker/: CMakeLists.txt
NovelMaker/res/style/: styledefine.h
NovelMaker/res/style/dark/pre/: 00_base.qssa  containers.qssa  selection.qssa  text_editors.qssa
NovelMaker/res/style/light/pre/: 00_base.qssa  button.qssa  containers.qssa  scroll_slider.qssa  selection.qssa  text_editors.qssa
NovelMaker/res/styles/styleDark/: 00_base.qss  00_base.qssa  button.qssa  containers.qssa  indicators.qssa  scroll_slider.qssa  selection.qssa  style.qssa  views.qssa
NovelMaker/res/styles/styleLight/: 00_base.qss  00_base.qssa  button.qssa  containers.qss  indicators.qssa  selection.qss  style.qss  views.qss
NovelMaker/src/core/: logger.cpp  logger.h  main.cpp
NovelMaker/src/ui/: enumlistwidget.h  mainwidget.h  mainwindow.cpp  mainwindow.h  settingwidget.h
NovelMaker/src/utilitis/: configmanager.h  configproject.h  configsystem.cpp  configsystem.h  configuser.h  configutilities.cpp  configutilities.h  configworkspace.h  fileutil.cpp  fileutil.h  fileutilities.cpp  fileutilities.h
NovelMaker/src/utilitis/config/: configbase.cpp  configbase.h  configdefine.h  configmanager.cpp  configmanager.h  configproject.cpp  configproject.h  configsystem.cpp  configsystem.h  configuser.cpp  configuser.h  configworkspace.cpp  configworkspace.h
NovelMaker/src/utilitis/file/: fileutil.cpp  fileutil.h  jsonfileutil.cpp  jsonfileutil.h
NovelMaker/src/utilitis/project/: projectmanager.cpp  projectmanager.h
NovelMaker/src/utilitis/style/: styledefine.h  stylemanager.cpp  stylemanager.h  styleutil.cpp  styleutil.h
NovelMaker/src/widget/: textbrowser.h
NovelMaker/src/windows/: characterwidget.cpp  characterwidget.h  characterwidget.ui  enumlistwidget.h  mainwidget.cpp  mainwidget.h  mainwidget.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  settingwidget.cpp  settingwidget.h  settingwidget.ui  widgetbase.cpp  widgetbase.h  worldwidget.cpp  worldwidget.h  worldwidget.ui
NovelMaker/widget/: textbrowser.cpp
lib/CommonUI/: CMakeLists.txt  CommonUI_global.h
lib/CommonUI/include/styles/: qsslorder.h  qssmanager.h  qssmerger.h  qsspreprocessor.h
lib/CommonUI/src/styles/: qsslorder.cpp  qssmanager.cpp  qssmerger.cpp  qsspreprocessor.cpp
lib/DataManager/: CMakeLists.txt  DataManager_global.h
lib/DataManager/include/config/: configmanager.h
lib/DataManager/src/config/: configmanager.cpp
src/ui/: mainwidget.cpp  mainwindow.h  settingwidget.cpp
